src/objects/Login_Flow_Configs__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AgentId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agent Id</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessGroups__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Groups</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CosmosId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CosmosId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfficeId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Id</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkipLoginFlow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Login Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UserToken</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Login Flow Configs</label>
</CustomObject>